# ai-inventory-bot

./: .env.example  .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
inventorybot/: entities.py  parser.py  service.py  settings.py  test_parser.py  vision.py
inventorybot/infra/: markdown_output.py
